style.css
@font-face {
    font-family: 'Iosevka Web';
    src: url(subset-Iosevka-Term.woff2);
}

.header {
    font-family: 'Iosevka Web';
    display: flex;
    color: white;
    flex-direction: row;
    justify-content: space-between;
    padding-left: 2em;
    padding-right: 2em;
    font-size: 1em;
}

.header-left {
    padding-top: 3em;
    font-size: 1em;
}

.header-right {
    padding-top: 3em;
    font-size: 1em;
}

.description {
    font-family: 'Iosevka Web';
    color: white;
    display: flex;
    justify-content: space-evenly;
    padding-left: 2em;
    padding-right: 2em;
    font-size: 1em;
}

.cat {
    font-size: 1em;
}

body {
    background-color: rgb(12, 16, 20);
    background-image: linear-gradient(to right, rgba(255, 255, 255, 0.3) 1px, transparent 1px), linear-gradient(to bottom, rgba(255, 255, 255, 0.3) 1px, transparent 1px);
    background-size: 4em 4em;
    background-position: -2em -2em;
    z-index: -1;
}

.section {
    display: flex;
    flex-direction: row;
    overflow-wrap: break-word;
    max-width: 600px;
    font-size: 1em;
}

.about {
    font-family: 'Iosevka Web';
    font-size: 1em;
}


.link {
    color: rgb(74, 53, 255);
    text-decoration: none;
    font-size: 1em;
}

